<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.shoppingapp.feature.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_homeDetailFragment"
            app:destination="@id/homeDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.shoppingapp.feature.basket.BasketFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_basket" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.shoppingapp.feature.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/homeDetailFragment"
        android:name="com.example.shoppingapp.feature.home_detail.HomeDetailFragment"
        android:label="fragment_home_detail"
        tools:layout="@layout/fragment_home_detail" >
        <argument
            android:name="id"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/splashFragment"
        android:name="com.example.shoppingapp.feature.splash.SplashFragment"
        android:label="fragment_splash"
        tools:layout="@layout/fragment_splash" >
        <action
            android:id="@+id/action_splashFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splashFragment_to_onBoardingFragment"
            app:destination="@id/onBoardingFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />

    </fragment>
    <fragment
        android:id="@+id/onBoardingFragment"
        android:name="com.example.shoppingapp.feature.on_boarding.OnBoardingFragment"
        android:label="fragment_on_boarding"
        tools:layout="@layout/fragment_on_boarding" >
        <action
            android:id="@+id/action_onBoardingFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/onBoardingFragment"
            app:popUpToInclusive="true" />
    </fragment>

</navigation>